fixed the overlaping css

--- a/style.css
+++ b/style.css
@@ -5,9 +5,18 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 section{
     padding: 20px;
+}
+ul{
+    list-style: none;
+    cursor: pointer;
+}
+a{
+    text-decoration: none;
+    color: #000;
 }
 .nav-bar{
     width: 100%;
@@ -16,6 +25,7 @@ section{
     justify-content: space-between;
     align-items: center;
     font-size: 20px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 .logo{
     margin-left: 20px;
@@ -23,7 +33,17 @@ section{
 .short-links{
     display: flex;
     list-style: none;
+    text-align: center;
 
+}
+.short-links>li{
+    height: 30px;
+    width: auto;
+
+
+}
+.short-links>li:hover{
+    border-bottom: 2px solid #91a51d;
 }
 .links{
     margin-right: 15px;
@@ -32,26 +52,24 @@ section{
     display: flex;
     width: 10%;
     justify-content: end;
+    align-items: center;
+    height: 100%;
     margin-right: 20px;
 }
 .right-nav>ul{
     display: flex;
-    text-align: center
+    text-align: center;
+    margin-top: 10px;
 }
 .right-nav>ul>li{
     list-style: none;
     display: flex;
-    margin-right: 35px;
-    height: 35px;
-    width: 80px;
-    border-radius: 4px;
-    background-color: #91a51d;
-    padding: 7px;
-    padding-left: 10px;
-    text-align: center;
-    font-size: 18px; 
+    margin-right: 10px;
+    padding: 10px;
     cursor: pointer;  
-
+}
+.right-nav>ul>li.nav-btn{
+    display: none;
 }
 #counter{
     height: 16px;
@@ -71,14 +89,14 @@ section{
     background-size: cover;
 }
 .banner-text{
-    width: clamp(300px,400px,500px);
+    max-width: 400px;
     color: black;
     min-height: 270px;
     background-color: antiquewhite;
     padding: 14px;
     position: absolute;
     top: 50%;
-    left: 70%;
+    left: 10%;
     transform: translate(-10%,-10%);
 
 }
@@ -117,9 +135,10 @@ p{
     margin: 0;
 }
 .types{
-    height: 500px;
+    min-height: 500px;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     
 }
@@ -286,8 +305,36 @@ footer {
     cursor: pointer;
 }
 
-/* Responsive Styles */
+.sidebar{
+  position: fixed;
+  top: 0;
+  right: 0;  
+  height: 100vh;
+  width: 50%;
+  z-index: 11;
+  background-color: rgba(255, 255, 255, .2 );
+  backdrop-filter: blur(10px);
+  box-shadow: -10px 0 10px rgba(0, 0, 0, .1);
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.sidebar li{
+    width: 100%;
+    margin-left: 30px;
+    padding: 10px;
+}
 
+/* Responsive Styles */
+@media only screen and (max-width: 1020px) {
+    .hide-on-mobile{
+        display: none;
+    }
+    .right-nav>ul>li.nav-btn{
+        display: block;
+    }
+}
 @media only screen and (max-width: 768px) {
     .column-1,
     .column-2,
@@ -295,4 +342,10 @@ footer {
         flex: 1 100%;
         margin: 0;
     }
+}
+@media only screen and (max-width: 420px) {
+    .sidebar{
+        width: 100%;
+    }
+
 }
